...
            <objects>
                <viewController id="QuK-o5-JKY" customClass="AddFeedController" customModule="UDFeeds" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="0SU-fc-DyR">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NKl-Eu-Csc">
                                <rect key="frame" x="20" y="128" width="374" height="40"/>
                                <color key="backgroundColor" red="0.88334459070000004" green="0.94792300460000001" blue="0.99608713390000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="RkB-Dr-4Qd"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="aPF-Fi-0yh"/>
                                    <constraint firstAttribute="height" constant="44" id="hB9-1o-tuZ"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Upload"/>
                                <connections>
                                    <action selector="uploadButtonTapped:" destination="QuK-o5-JKY" eventType="touchUpInside" id="4Ue-f8-6bQ"/>
                                </connections>
                            </button>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="iiG-P2-sRW">
                                <rect key="frame" x="187" y="405" width="40" height="40"/>
...
                            <constraint firstItem="rEO-ab-uaE" firstAttribute="top" secondItem="OMM-Xx-aFU" secondAttribute="bottom" constant="40" id="oWo-Rs-Vkn"/>
                            <constraint firstItem="iiG-P2-sRW" firstAttribute="top" secondItem="OMM-Xx-aFU" secondAttribute="bottom" constant="50" id="t6r-Uq-MKI"/>
                            <constraint firstItem="XuG-4v-ZmB" firstAttribute="trailing" secondItem="rEO-ab-uaE" secondAttribute="trailing" constant="20" id="xCc-64-v1h"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="XuG-4v-ZmB"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Feed" leftItemsSupplementBackButton="YES" id="8EB-7L-6TW"/>
                    <connections>
                        <outlet property="activityIndicator" destination="iiG-P2-sRW" id="a02-yH-59A"/>
                        <outlet property="descriptionTextView" destination="f85-uG-fo9" id="X1l-c5-sWV"/>
                        <outlet property="titleTextField" destination="NKl-Eu-Csc" id="u5O-QX-sKw"/>
                        <outlet property="uploadButton" destination="rEO-ab-uaE" id="u7N-c6-r4l"/>
                    </connections>
...
