...
    
    @IBOutlet weak var titleTextField: UITextField!
    @IBOutlet weak var descriptionTextView: UITextView!
    @IBOutlet weak var uploadButton: BlueButton!
    @IBOutlet weak var activityIndicator: UIActivityIndicatorView!
    
    let placeholder = "Body Text"
    let start = NSRange(location: 0, length: 0)
    var presenter: AddFeedPresenter?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setUp()
...
